port is now configureable

--- a/config.ini
+++ b/config.ini
@@ -4,6 +4,10 @@ BASE_URL = http://localhost:8989/api/v1
 # The password. The hash is caclulated from it:
 PASSWORD = test
 
+[SCRIPT]
+# Script host is automatically localhost, and port:
+SERVER_PORT = 8888
+
 [design]
 # MARGIN: in Percent relative to everything:
 MARGIN_IN_PERCENT = 3
